Remove obsolete --add-exports configuration